Everything seems to be now aligned and with the correct proportions in the desktop version.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -116,62 +116,66 @@ body{
 
 /* First section: Banner ***********************************************************************************/
 
-.banner{
-  background-color: #d8d8d8;
-  display: flex;
-}
+ .banner{
+   background-color: #d8d8d8;
+   display: flex;
+ }
 
-/* Big picture in the banner */
+ /* Big picture in the banner */
 
-.banner img{
-  width: 60%;
-  padding: 2rem 1.5rem;
-}
+ .banner-left{
+   max-width: 60%;
 
-/* Sign up text and button */
+   display: flex;
+ }
 
-.banner div{
-  width: 25%;
+ .banner-left img{
+   max-width: 100%;
+   padding: 2rem 1.5rem;
+ }
 
+ /* Sign up text and button */
+.banner-right div {
+  max-width: 40%;
+  margin-left: 1.5rem;
   display: flex;
   flex-flow: column;
   justify-content: center;
-}
 
+}
 .banner h1{
+  margin-top: 40%;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   font-size: 2.25rem;
   font-weight: 600;
   color: #4a4a4a;
 }
-
 .banner h2{
+  margin-top: 2rem;
   margin: 2rem 1.5rem 0 1.5rem;
 }
-
-.banner .button{
+.button{
+  margin: 2rem 0 0 0;
   margin: 1.5rem 1.5rem 2rem 1.5rem;
-  width: 90%;
-
   background-color: #4a4a4a;
-}
+ }
 
-.banner .button a{
-  padding: .5rem 0;
+.button a{
+   padding: .5rem 0;
 
-  color: white;
-  text-decoration: none;
-  align-self: center;
-}
+   color: white;
+   text-decoration: none;
+   align-self: center;
+ }
 
-.button:hover{
-  background-color: #4a90e2;
+ .button:hover{
+   background-color: #4a90e2;
 }
 
 @media only screen and (max-width: 720px) {
   .banner {
-    display: block
+    display: block;
   }
 
   .banner img{
@@ -193,27 +197,28 @@ body{
   display: flex;
 }
 
-/* Big picture and text in second section: Information */
+/* Left panel in both Information and Thesis sections */
 
 .leftbox{
-  width: 60%;
-  margin: 0;
-  padding-bottom: .5rem;
+  max-width: 60%;
 
-  display: inline-block;
+  display: flex;
+  flex-flow: column;
+  margin: 2rem 1.5rem;
 }
 
 .leftbox img{
-  padding: 2rem 1.5rem;
   max-width: 100%;
 }
 
 .leftbox h2{
-  padding: .5rem 1.5rem;
+  margin: 2rem 0 1.5rem 0;
+  max-width: 100%;
 }
 
 .leftbox p{
-  padding: 1rem 1.5rem 1.5rem 1.5rem;
+  margin: 0 0 2rem 0;
+  max-width: 100%;
 }
 
 .leftbox span{
@@ -225,30 +230,25 @@ body{
     display: none;
   }
 
-  .banner img{
-    width: 100%;
-    padding: 2rem 0;
-  }
-
-  .banner div{
-    width: 100%;
-    margin: 0;
-  }
 
 }
 
 /* Article descriptions in second section: Information and in the fourth section: Thesis */
 
 .rightbox{
-  width: 40%;
-  margin: 1.5rem 0 2rem 2rem;
+  min-width: 40%;
+  margin-top: 1rem;
+
   display: flex;
   flex-flow: column;
 }
 
 /* Divs within the right side of sections Information and Thesis*/
-.preview{
-  padding: 0.5rem 0 .5rem 1rem;
+ .preview{
+  width: 100%;
+  margin: 0rem 0;
+  padding: 1rem 0;
+
   display: flex;
 }
 
@@ -258,29 +258,30 @@ body{
 
 .imageholder{
   max-width: 35%;
+  display: flex;
 }
 
-.rightbox img{
+.imageholder img{
   width: 100%;
   margin: 0 1rem;
-  padding: 0 1rem;
 }
 
 /* Descriptive text gathered in an aside in sections Information and Thesis*/
-.rightbox aside{
-  margin-left: 15%;
+.preview aside{
+  /* margin-left: 35%; */
+  width: 65%;
 
   display: flex;
   flex-flow: column;
   justify-content: center;
 }
 
-.rightbox h3, .rightbox p{
-  max-width: 100%;
+.preview h3, .preview p{
+  display: flex;
   margin: 0 1rem .5rem 0;
 }
 
-.rightbox a{
+.preview a{
   color: #4a90e2;
   text-decoration: none;
 }
@@ -370,7 +371,6 @@ body{
 
 video{
   width: 100%;
-  padding: 0 1.5rem;
   background-color: #f3f5f5;
 }
 
@@ -389,17 +389,12 @@ footer ul{
   justify-content: space-between;
 }
 
-
 footer div{
   margin-left: 1.5rem;
 }
 footer nav{
   margin-right: 1.5rem;
 }
-
-/* footer ul{
-  display: inline-flex;
-} */
 
 footer a{
   padding-left: 1rem;
